--- a/archive.html
+++ b/archive.html
@@ -23,7 +23,7 @@
 <body>
 
 	<video autoplay muted loop id="background">
-		<source src="assets/img/bg-sm.mov" type="video/mp4">
+		<source src="assets/img/clip-5-sm.mov" type="video/mp4">
 	</video>
 
 	<div class="top top-left">
