--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 					<td class="col-right">Tokyo</td>
 				</tr>
 				<tr >
-					<td class="col-left"><em>** tbd</em></td>
+					<td class="col-left"><em>*tbd</em></td>
 					<td class="col-center hide"><em><a class="link-no-style" href="archive.html">see past events</a></em>
 					</td>
 					<td class="col-right"></td>
