reordering home page

--- a/index.html
+++ b/index.html
@@ -173,32 +173,7 @@
 				Alongside the lecture performance, the eponymous 700+ page artist book will be published on Metalabel. The book A SEXUAL HISTORY OF THE INTERNET is a fiscal experiment of redistribution. In it, you’ll find citations by 45 people. When you buy this book, they will split 30% of profits through “Citational Splits” — a new model of attribution.
 			</p>
 		</div>
-			
-		<div class="description block">
-			Artist, Author: <a href="https://mindyseu.com/" target="_blank">Mindy Seu</a><br>
-			Designer: <a href="http://www.lauracoombs.com/" target="_blank">Laura Coombs</a><br>
-			Editor: <a href="https://megmiller.world/" target="_blank">Meg Miller</a><br>
-			Collaborator: <a href="http://www.juliocorrea.com" target="_blank">Julio Correa</a><br>
-			Illustrator: <a href="https://venqiu.net/" target="_blank">Ven Qiu</a><br>
-			Timecodes Scripting: <a href="https://jongacnik.com/" target="_blank">Jon Gacnik</a><br>
-			Videographer: <a href="https://www.josegabriel.studio/" target="_blank">Gabriel Noguez</a><br>
-			3D Artist: <a href="https://tomhancocks.info/" target="_blank">Tom Hancocks</a><br>
-			Website Support: <a href="https://www.charlesbroskoski.com/" target="_blank">Charles Broskoski</a><br>
-			Metalabel: <a href="https://www.ystrickler.com/" target="_blank">Yancey Strickler</a><br>
-			Consultant: <a href="https://www.giakuan.com/" target="_blank">Gia Kuan</a><br>
-			Printer: <a href="https://www.dza.de/en/" target="_blank">DZA</a>
-			</p>
-		</div>
 
-		<div class="description block">
-			<p class="header">
-				ABOUT THE ARTIST
-			</p>
-			<p>
-				Mindy Seu (b. 1991, California) is an artist and technologist based in Los Angeles and New York City whose practice focuses on technology-driven performance and publication. A SEXUAL HISTORY OF THE INTERNET (2025) follows her first book CYBERFEMINISM INDEX (2023), a pseudo-encyclopedia that gathers three decades of online activism and net art. Mindy is currently teaching as an Associate Professor at University of California, Los Angeles in the Department of Design Media Arts.
-			</p>
-		</div>
-		
 		<div class="description block">
 			<p class="header">
 				PRAISE
@@ -220,6 +195,31 @@
 			</p>
 		</div>
 
+		<div class="description block">
+			<p class="header">
+				CREDITS
+			</p>
+			<p>
+				Mindy Seu (b. 1991, California) is an artist and technologist based in Los Angeles and New York City whose practice focuses on technology-driven performance and publication. A SEXUAL HISTORY OF THE INTERNET (2025) follows her first book CYBERFEMINISM INDEX (2023), a pseudo-encyclopedia that gathers three decades of online activism and net art. Mindy is currently teaching as an Associate Professor at University of California, Los Angeles in the Department of Design Media Arts.
+			</p>
+		</div>
+
+		<div class="description block">
+			Artist, Author: <a href="https://mindyseu.com/" target="_blank">Mindy Seu</a><br>
+			Designer: <a href="http://www.lauracoombs.com/" target="_blank">Laura Coombs</a><br>
+			Editor: <a href="https://megmiller.world/" target="_blank">Meg Miller</a><br>
+			Collaborator: <a href="http://www.juliocorrea.com" target="_blank">Julio Correa</a><br>
+			Illustrator: <a href="https://venqiu.net/" target="_blank">Ven Qiu</a><br>
+			Timecodes Scripting: <a href="https://jongacnik.com/" target="_blank">Jon Gacnik</a><br>
+			Videographer: <a href="https://www.josegabriel.studio/" target="_blank">Gabriel Noguez</a><br>
+			3D Artist: <a href="https://tomhancocks.info/" target="_blank">Tom Hancocks</a><br>
+			Website Support: <a href="https://www.charlesbroskoski.com/" target="_blank">Charles Broskoski</a><br>
+			Metalabel: <a href="https://www.ystrickler.com/" target="_blank">Yancey Strickler</a><br>
+			Consultant: <a href="https://www.giakuan.com/" target="_blank">Gia Kuan</a><br>
+			Printer: <a href="https://www.dza.de/en/" target="_blank">DZA</a>
+			</p>
+		</div>
+		
 		<div class="footer footer-left">
 			<a href="mailto:mindyseu@gmail.com" target="_blank">mindyseu@gmail.com</a>
 		</div>
