--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 			<p>
 				“Is the internet about sex or sterility? It’s a species-level decision we still have not made. But the conversation is starting with A SEXUAL HISTORY OF THE INTERNET. A must-see if you have sex organs and use the internet.”
 				<br>		
-				—Jaron Lanier, pioneer of virtuality reality 
+				—Jaron Lanier, pioneer of virtual reality 
 			</p>
 			<p>
 				“This is not just a performance, it’s an excavation. Mindy Seu exposes the sexual subtext coded into our technologies and reframes the internet as a site of power, control, and longing. It’s bold, brilliant, and necessary.”
