--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
 		</div>
 
 		<div class="description block">
-			<img id="book" class="no-mobile" src="assets/img/book-horizontal.png" />
-			<img id="book" class="mobile" src="assets/img/book-vertical.png" />
+			<img id="book" class="" src="assets/img/book.jpg" />
 			<a class="button" href="xxx" target="_blank"><span class="blink">Preorder the Book!</span></a>
 			<p>
 				Alongside the lecture performance, the eponymous 700+ page artist book will be published on Metalabel. The book A SEXUAL HISTORY OF THE INTERNET is a fiscal experiment of redistribution. In it, you’ll find citations by 45 people. When you buy this book, they will split 30% of profits through “Citational Splits” — a new model of attribution.
