--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
 			</p>
 			<img id="artist" class="no-mobile" src="assets/img/MindySeubyIgaDrobisz_xs.png" />
 			<img id="artist" class="mobile" src="assets/img/MindySeubyIgaDrobisz_xs.jpg" />
+			<p class="caption-center">Photo by <a href="https://www.igadrobisz.com/" target="_blank">Iga Drobisz</a></p>
 			<p>
 				Mindy Seu (b. 1991, California) is an artist and technologist based in Los Angeles and New York City whose practice focuses on technology-driven performance and publication. A SEXUAL HISTORY OF THE INTERNET (2025) follows her first book CYBERFEMINISM INDEX (2023), a pseudo-encyclopedia that gathers three decades of online activism and net art. Mindy is currently teaching as an Associate Professor at University of California, Los Angeles in the Department of Design Media Arts.
 			</p>
