--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				</tr>
 				<tr>
 					<td class="col-left">2025-11-15</td>
-					<td class="col-center">MOCA Geffen Contemporary
+					<td class="col-center">Museum of Contemporary Art, Los Angeles
 						<!-- → <a href="xxx" target="_blank">info</a> -->
 					</td>
 					<td class="col-right">Los Angeles</td>
